--- a/languages/lang-1.xml
+++ b/languages/lang-1.xml
@@ -220,4 +220,7 @@
         <must_be_logged>You must be logged to add an address</must_be_logged>
         <user_not_created>User was not created, please correct mistakes</user_not_created>
   </errors>
+  <messages>
+    <addr_created>The new address was added</addr_created>
+  </messages>
 </locale>
